--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -513,6 +513,76 @@ button[type='reset'] {
 }
 /* end banner styles */
 
+/* start banner slider styles */
+.slide {
+  display: none;
+}
+
+.banner-slider {
+  position: relative;
+}
+
+.banner-slider .slider-content {
+  margin: auto;
+}
+
+.banner-nav {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #aaaaaa45;
+  position: absolute;
+  top: 90%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 6px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #c52743;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+/* end banner slider styles */
+
 /* start products banner styles */
 .products-title {
   text-align: center;
