--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -228,11 +228,11 @@ a:visited {
 
 a:hover,
 a:focus {
-  color: #4aaaa5;
+  color: #c52743;
 }
 
 a:active {
-  color: #4aaaa5;
+  color: #c52743;
 }
 
 strong,
@@ -292,22 +292,6 @@ h5 {
 
 h6 {
   font-size: 0.7rem;
-}
-
-::-webkit-input-placeholder {
-  color: #aaa;
-}
-
-:-moz-placeholder {
-  color: #aaa;
-}
-
-::-moz-placeholder {
-  color: #aaa;
-}
-
-:-ms-input-placeholder {
-  color: #aaa;
 }
 
 /* start input text styles */
@@ -380,6 +364,111 @@ button[type='reset'] {
   margin: 5px;
 }
 /* end top header styles */
+
+/* start header styles  */
+.header-box {
+  width: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.menu {
+  width: 80%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.menu > div {
+  width: 100%;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #fff;
+  color: #cccccc40;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.item-dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.item-dropdown .item-link {
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  padding: 14px 16px;
+  background-color: inherit;
+  color: #ccc;
+  margin: 0;
+}
+
+.navbar a:hover,
+.item-dropdown:hover .item-link {
+  background-color: #ccc3;
+  color: #c52743;
+}
+
+.menu-dropdown {
+  display: none;
+  position: absolute;
+  background-color: #ccc3;
+  width: 100%;
+  left: 0;
+  z-index: 1;
+}
+
+.item-dropdown:hover .menu-dropdown {
+  display: block;
+}
+
+.menu-box {
+  float: left;
+  width: 25%;
+  padding: 10px;
+  background-color: #fff;
+  height: auto;
+}
+
+.menu-box a {
+  float: none;
+  color: black;
+  padding: 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.menu-box a:hover {
+  background-color: #ccc3;
+}
+
+/* clear floats */
+.menu-flex:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+/* end header styles  */
 
 /* start footer styles */
 .footer {
@@ -705,6 +794,14 @@ button[type='reset'] {
 }
 /* end products banner styles */
 
+/* start cms styles */
+.products-banner,
+.banner-section,
+.locations {
+  margin: 40px 0px;
+}
+/* end cms styles */
+
 /* start responsive styles*/
 /* Extra small devices (phones, less than 768px) */
 @media (max-width: 768px) {
@@ -735,6 +832,14 @@ button[type='reset'] {
 
   #promotion-timer > div > span {
     font-size: 25px;
+  }
+
+  .menu {
+    flex-direction: column;
+  }
+
+  .menu-box {
+    width: 100%;
   }
 }
 
